// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index html 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
  <meta charset=\\"UTF-8\\">
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
  <title>Html prefetch css webpack plugin</title>
<link href=\\"moduleA.41e02ef82460f1bbbe03.css\\" rel=\\"prefetch\\"><link href=\\"moduleB.41e02ef82460f1bbbe03.css\\" rel=\\"prefetch\\"><link href=\\"index.41e02ef82460f1bbbe03.css?41e02ef82460f1bbbe03\\" rel=\\"stylesheet\\"></head>
<body>
  <div id=\\"root\\"></div>
<script type=\\"text/javascript\\" src=\\"index.bundle.js?41e02ef82460f1bbbe03\\"></script></body>
</html>"
`;

exports[`second html 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
  <meta charset=\\"UTF-8\\">
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
  <title>Html prefetch css webpack plugin</title>
<link href=\\"moduleC.41e02ef82460f1bbbe03.css\\" rel=\\"prefetch\\"></head>
<body>
  <div id=\\"root\\"></div>
<script type=\\"text/javascript\\" src=\\"second.bundle.js?41e02ef82460f1bbbe03\\"></script></body>
</html>"
`;
